--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.Css">
     <title>Css Demo</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to my website</h1>
     <p class="intro">this is am introduction paragraph.</p>
-    <div> 
+    <div id="main-content"> 
         <h2>About me</h2>
-        <p>I'm learning CSS to make beautiful websites!</p>
+        <p>I'm learning CSS to make beautiful<span>website</span> websites!</p>
         <ul>
-            <li id="first-list-item">HTML</li>
+            <li>HTML</li>
             <li>CSS</li>
             <li>JAVA SCRIPT</li>
         </ul>
